Bug 173584 - Krita crashes on opening a .kra file created with a previous version that contains certain filters
Summary: Krita crashes on opening a .kra file created with a previous version that con...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks: 137702
  Show dependency treegraph
 
Reported: 2008-10-26 12:41 UTC by Michael Leupold
Modified: 2008-11-07 21:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
testcase (12.69 KB, application/octet-stream)
2008-10-26 12:42 UTC, Michael Leupold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Leupold 2008-10-26 12:41:06 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

On trying to reproduce Bug 137702, krita crashes on opening the attached testcase for that bug.

Application: Krita (krita), signal SIGSEGV
Using host libthread_db library "/lib/libthread_db.so.1".
0x00007f5c8a2464b5 in waitpid () from /lib/libpthread.so.0

Thread 1 (Thread 0x7f5c8d6f67e0 (LWP 11739)):
[KCrash Handler]
#4  0x00007f5c8b32bf83 in KoLcmsColorSpace<KoRgbTraits<unsigned char> >::KoLcmsColorTransformation::transform (this=0x1384170, src=0x7f5c7135d010 "", dst=0x7f5c7135d010 "", nPixels=4096)
    at /home/lemma/kde/trunk/source/koffice/libs/pigment/KoLcmsColorSpace.h:94
#5  0x00007f5c6f7991c0 in KisBrightnessContrastFilter::process (this=<value optimized out>, srcInfo=<value optimized out>, dstInfo=<value optimized out>, size=@0x7fff95872d50, config=0x12b9ce0, 
    progressUpdater=0x0) at /home/lemma/kde/trunk/source/koffice/krita/plugins/filters/colorsfilters/kis_brightness_contrast_filter.cc:253
#6  0x00007f5c8cd741c0 in KisFilter::process (this=0x12f0210, src=@0x7fff95872d40, dst=<value optimized out>, size=@0x7fff95872d50, config=0x12b9ce0)
    at /home/lemma/kde/trunk/source/koffice/krita/image/filter/kis_filter.cc:58
#7  0x00007f5c8cde5727 in visit (this=<value optimized out>, layer=0x12c6e70) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_top_down_update_strategy.cpp:222
#8  0x00007f5c8cd7d843 in KisAdjustmentLayer::accept (this=0x137e2b0, v=@0x1289a50) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_adjustment_layer.cc:221
#9  0x00007f5c8cde45b7 in KisTopDownUpdateStrategy::updateGroupLayerProjection (this=<value optimized out>, rc=@0x7fff958730f0, projection=@0x7fff95872f90)
    at /home/lemma/kde/trunk/source/koffice/krita/image/kis_top_down_update_strategy.cpp:403
#10 0x00007f5c8cd969d7 in KisGroupLayer::updateProjection (this=0x12a8590, rc=@0x7fff958730f0) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_group_layer.cc:224
#11 0x00007f5c8cde67f4 in KisTopDownUpdateStrategy::setDirty (this=0x8b9f60, rc=@0x7fff958730f0) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_top_down_update_strategy.cpp:324
#12 0x00007f5c8cde6855 in KisTopDownUpdateStrategy::setDirty (this=0x12b54e0, rc=@0x7fff958730f0) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_top_down_update_strategy.cpp:327
#13 0x00007f5c8cdab88c in KisNode::setDirty (this=0x12b5150) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_node.cpp:110
#14 0x00007f5c8cda3214 in KisChangeProfileVisitor::updatePaintDevice (this=0x7fff95873230, layer=0x12b5150) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_change_profile_visitor.h:101
#15 0x00007f5c8cda3269 in KisChangeProfileVisitor::visit (this=0x1289a50, layer=0x7fff958728c0) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_change_profile_visitor.h:75
#16 0x00007f5c8cdb5db3 in KisPaintLayer::accept (this=0x137e2b0, v=@0x1289a50) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_paint_layer.cc:176
#17 0x00007f5c8cda3627 in KisChangeProfileVisitor::visit (this=0x7fff95873230, layer=0x12a8590) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_change_profile_visitor.h:66
#18 0x00007f5c8cd96763 in KisGroupLayer::accept (this=0x137e2b0, v=@0x1289a50) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_group_layer.cc:180
#19 0x00007f5c8cd9de73 in KisImage::setProfile (this=0x1280d30, profile=0x12c5410) at /home/lemma/kde/trunk/source/koffice/krita/image/kis_image.cc:608
#20 0x00007f5c8d153100 in KisKraLoader::loadBinaryData (this=0xa20900, store=0x126f2d0, img=@0x7fff95873470, uri=@0x7fff95873480, external=true)
    at /home/lemma/kde/trunk/source/koffice/krita/ui/kra/kis_kra_loader.cpp:188
#21 0x00007f5c8d13f134 in KisDoc2::completeLoading (this=0x7a62e0, store=0x126f2d0) at /home/lemma/kde/trunk/source/koffice/krita/ui/kis_doc2.cc:382
#22 0x00007f5c8b0371a1 in KoDocument::loadNativeFormatFromStoreInternal (this=0x7a62e0, store=0x126f2d0) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:1848
#23 0x00007f5c8b037452 in KoDocument::loadNativeFormatFromStore (this=0x7a62e0, file=@0x7fff95873cd0) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:1734
#24 0x00007f5c8b03796a in KoDocument::loadNativeFormat (this=0x7a62e0, file=@0x7fff95873cd0) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:1714
#25 0x00007f5c8b0383e3 in KoDocument::openFile (this=0x7a62e0) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:1530
#26 0x00007f5c879ff3cb in KParts::ReadOnlyPart::openUrl (this=0x7a62e0, url=@0x7fff95874150) at /home/lemma/kde/trunk/source/KDE/kdelibs/kparts/part.cpp:557
#27 0x00007f5c8b039351 in KoDocument::openUrl (this=0x7a62e0, _url=@0x7fff95874600) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:1385
#28 0x00007f5c8b03337a in KoDocument::openExistingFile (this=0x1289a50, url=@0x7fff958728c0) at /home/lemma/kde/trunk/source/koffice/libs/main/KoDocument.cpp:2565
#29 0x00007f5c8d13e46a in KisDoc2::openExistingFile (this=0x7a62e0, url=@0x7fff95874600) at /home/lemma/kde/trunk/source/koffice/krita/ui/kis_doc2.cc:170
#30 0x00007f5c8d13e975 in KisDoc2::qt_metacall (this=0x7a62e0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff95874450)
    at /home/lemma/kde/trunk/build/debug/build/koffice/krita/ui/kis_doc2.moc:94
#31 0x00007f5c8a5ed8d1 in QMetaObject::activate (sender=0x86ad80, from_signal_index=27, to_signal_index=27, argv=0x7fff95874450)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3031
#32 0x00007f5c8a5ede57 in QMetaObject::activate (sender=0x86ad80, m=0x7f5c8b2d8400, local_signal_index=0, argv=0x7fff95874450)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3101
#33 0x00007f5c8b094ec2 in KoOpenPane::openExistingFile (this=0x1289a50, _t1=<value optimized out>) at /home/lemma/kde/trunk/build/debug/build/koffice/libs/main/KoOpenPane.moc:96
#34 0x00007f5c8b09510f in KoOpenPane::qt_metacall (this=0x86ad80, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff958745e0)
    at /home/lemma/kde/trunk/build/debug/build/koffice/libs/main/KoOpenPane.moc:79
#35 0x00007f5c8a5ed8d1 in QMetaObject::activate (sender=0x8a5c50, from_signal_index=27, to_signal_index=27, argv=0x7fff958745e0)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3031
#36 0x00007f5c8a5ede57 in QMetaObject::activate (sender=0x8a5c50, m=0x7f5c8b2d9e00, local_signal_index=0, argv=0x7fff958745e0)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3101
#37 0x00007f5c8b0a6b82 in KoExistingDocumentPane::openExistingUrl (this=0x1289a50, _t1=<value optimized out>)
    at /home/lemma/kde/trunk/build/debug/build/koffice/libs/main/KoExistingDocumentPane.moc:81
#38 0x00007f5c8b0a6c1a in KoExistingDocumentPane::onAccepted (this=0x8a5c50) at /home/lemma/kde/trunk/source/koffice/libs/main/KoExistingDocumentPane.cpp:62
#39 0x00007f5c8b0a6c9a in KoExistingDocumentPane::qt_metacall (this=0x8a5c50, _c=QMetaObject::InvokeMetaMethod, _id=20439728, _a=0x7fff958746f0)
    at /home/lemma/kde/trunk/build/debug/build/koffice/libs/main/KoExistingDocumentPane.moc:70
#40 0x00007f5c8a5ed8d1 in QMetaObject::activate (sender=0x8cd550, from_signal_index=31, to_signal_index=31, argv=0x0) at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3031
#41 0x00007f5c8a5ede57 in QMetaObject::activate (sender=0x8cd550, m=0x7f5c834056a0, local_signal_index=4, argv=0x0) at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3101
#42 0x00007f5c831b76b4 in KFileWidget::accepted (this=0x8cd550) at /home/lemma/kde/trunk/build/debug/build/KDE/kdelibs/kfile/kfilewidget.moc:173
#43 0x00007f5c831bdfda in KFileWidget::slotOk (this=0x8cd550) at /home/lemma/kde/trunk/source/KDE/kdelibs/kfile/kfilewidget.cpp:918
#44 0x00007f5c831bf71a in KFileWidget::qt_metacall (this=0x8cd550, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0x7fff95874e60)
    at /home/lemma/kde/trunk/build/debug/build/KDE/kdelibs/kfile/kfilewidget.moc:117
#45 0x00007f5c8a5ed8d1 in QMetaObject::activate (sender=0xa3a980, from_signal_index=29, to_signal_index=30, argv=0x7fff95874e60)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3031
#46 0x00007f5c8a5edbe5 in QMetaObject::activate (sender=0xa3a980, m=0x7f5c88947240, from_local_signal_index=2, to_local_signal_index=3, argv=0x7fff95874e60)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qobject.cpp:3121
#47 0x00007f5c884cb74f in QAbstractButton::clicked (this=0xa3a980, _t1=false) at .moc/debug-shared/moc_qabstractbutton.cpp:185
#48 0x00007f5c881d72a0 in QAbstractButtonPrivate::emitClicked (this=0xa61f20) at /home/lemma/kde/trunk/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:538
#49 0x00007f5c881d8587 in QAbstractButtonPrivate::click (this=0xa61f20) at /home/lemma/kde/trunk/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:531
#50 0x00007f5c881d882e in QAbstractButton::mouseReleaseEvent (this=0xa3a980, e=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:1110
#51 0x00007f5c87e77d76 in QWidget::event (this=0xa3a980, event=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qwidget.cpp:7163
#52 0x00007f5c881d7249 in QAbstractButton::event (this=0xa3a980, e=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/widgets/qabstractbutton.cpp:1072
#53 0x00007f5c88298a63 in QPushButton::event (this=0xa3a980, e=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/widgets/qpushbutton.cpp:652
#54 0x00007f5c87e11643 in QApplicationPrivate::notify_helper (this=0x656420, receiver=0xa3a980, e=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication.cpp:3803
#55 0x00007f5c87e12262 in QApplication::notify (this=0x7fff95876920, receiver=0xa3a980, e=0x7fff95875a00) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication.cpp:3528
#56 0x00007f5c8c3f8e32 in KApplication::notify (this=0x7fff95876920, receiver=0xa3a980, event=0x7fff95875a00) at /home/lemma/kde/trunk/source/KDE/kdelibs/kdeui/kernel/kapplication.cpp:307
#57 0x00007f5c8a5d5658 in QCoreApplication::notifyInternal (this=0x7fff95876920, receiver=0xa3a980, event=0x7fff95875a00)
    at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qcoreapplication.cpp:587
#58 0x00007f5c87e1f7a3 in QCoreApplication::sendSpontaneousEvent (receiver=0xa3a980, event=0x7fff95875a00)
    at ../../include/QtCore/../../../../../../source/qt-copy/src/corelib/kernel/qcoreapplication.h:212
#59 0x00007f5c87e167bb in QApplicationPrivate::sendMouseEvent (receiver=0xa3a980, event=0x7fff95875a00, alienWidget=0x0, nativeWidget=0xa3a980, buttonDown=0x7f5c889614e8, 
    lastMouseReceiver=@0x7f5c889614f0) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication.cpp:2793
#60 0x00007f5c87e9d46f in QETWidget::translateMouseEvent (this=0xa3a980, event=0x7fff95876510) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:4042
#61 0x00007f5c87e9acc3 in QApplication::x11ProcessEvent (this=0x7fff95876920, event=0x7fff95876510) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication_x11.cpp:3038
#62 0x00007f5c87eca441 in x11EventSourceDispatch (s=0x659130, callback=0, user_data=0x0) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:142
#63 0x00007f5c819e60f2 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#64 0x00007f5c819e9396 in ?? () from /usr/lib/libglib-2.0.so.0
#65 0x00007f5c819e982f in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#66 0x00007f5c8a60a6b8 in QEventDispatcherGlib::processEvents (this=0x6561f0, flags=@0x7fff958767b0) at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qeventdispatcher_glib.cpp:319
#67 0x00007f5c87ec9b27 in QGuiEventDispatcherGlib::processEvents (this=0x6561f0, flags=@0x7fff95876810) at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qguieventdispatcher_glib.cpp:198
#68 0x00007f5c8a5d2070 in QEventLoop::processEvents (this=0x7fff958768c0, flags=@0x7fff95876870) at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qeventloop.cpp:143
#69 0x00007f5c8a5d226c in QEventLoop::exec (this=0x7fff958768c0, flags=@0x7fff958768d0) at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qeventloop.cpp:194
#70 0x00007f5c8a5d605b in QCoreApplication::exec () at /home/lemma/kde/trunk/source/qt-copy/src/corelib/kernel/qcoreapplication.cpp:845
#71 0x00007f5c87e113a4 in QApplication::exec () at /home/lemma/kde/trunk/source/qt-copy/src/gui/kernel/qapplication.cpp:3331
#72 0x00007f5c8d45a0cb in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /home/lemma/kde/trunk/source/koffice/krita/main.cc:56
#73 0x00007f5c864b6466 in __libc_start_main () from /lib/libc.so.6
#74 0x0000000000400879 in _start ()
Comment 1 Michael Leupold 2008-10-26 12:42:23 UTC
Created attachment 28155 [details]
testcase

Reattaching the testcase as just linking it doesn't seem possible.
Comment 2 Cyrille Berger 2008-11-07 21:15:23 UTC
SVN commit 881333 by berger:

don't assume there the adjustement is still valid between two calls to the birghtness contrast filter, because it's obviously not always the case

BUG: 173584

 M  +4 -3      kis_brightness_contrast_filter.cc  


WebSVN link: http://websvn.kde.org/?view=rev&revision=881333