don't assume there the adjustement is still valid between two calls to the birghtness contrast filter, because it's obviously not always the case

BUG: 173584

svn path=/trunk/koffice/; revision=881333